# EN325-Advanced-digital-design-old

./: .directory  .gitignore  README.md
1_SYSTEMC/: README.md
1_SYSTEMC/Part1_Question_1/src/: main.cpp
1_SYSTEMC/Part1_Question_2/: Makefile
1_SYSTEMC/Part2_Solution_1/: Makefile
1_SYSTEMC/Part2_Solution_2/: Makefile
1_SYSTEMC/Part3_Solution_1/: Makefile
1_SYSTEMC/Question_1/: Makefile
1_SYSTEMC/Question_3/: Makefile
2_PART_VHDL/: README.md
2_PART_VHDL/ADD_SIGNED/: ADD_WRAPPER.vhd
2_PART_VHDL/DIVIDER/: divider_generic.vhd
2_PART_VHDL/DIV_SIGNED/: DIV_SIGNED.vhd  testbench_divider.vhd
2_PART_VHDL/IEEE754_ADD/: ADD_IEEE754.vhd
2_PART_VHDL/IEEE754_MUL/: MULT_IEEE754.vhd
2_PART_VHDL/MUL_CSTE/: MUL_CONST.vhd
2_PART_VHDL/MUL_SIGNED/: MUL_SIGNED.vhd
3_PART_HLS/: my_module.h
3_SYSTEMC/: README.md
4_VHDL/: README.md
5_FPGA/: README.md
6_HLS/: .directory  README.md
6_HLS/Q1/: my_module.cpp  my_module.h  top_module.cpp
6_HLS/tb_modules/: Analyzer.h  Generator.cpp
7_FPGA/: README.md
7_FPGA/2_FPGAVerfication/: Makefile
8_ALL_SYSTEM/: README.md
8_ALL_SYSTEM/1_Simulation/: CMakeLists.txt  Makefile
8_ALL_SYSTEM/4_Verification/: CMakeLists.txt  Makefile  README.md
8_ALL_SYSTEM/4_Verification/src/: main.cpp
8_ALL_SYSTEM/4_Verification/src/DataSink/: DataSink.cpp
8_ALL_SYSTEM/4_Verification/src/DataSource/: DataSource.cpp
8_ALL_SYSTEM/4_Verification/src/Encoder/: HardEncoder.cpp  HardEncoder.h
9_Optimisation/: README.md
9_Optimisation/1_hls/: .directory
9_Optimisation/3_c_code/: Makefile
X_PART_ALL/: README.md
(+220 files in other folders)
